# games10-homework

./: .gitignore  README.md  sources.txt
a1/: main.cpp
a2/: main.cpp  rasterizer.cpp  rasterizer.hpp
a3/: main.cpp  rasterizer.cpp
a4/: main.cpp
a5/: Renderer.cpp  Triangle.hpp
a6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
a7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  CudaHelper.hpp  CudaRender.cu  CudaRender.h  Intersection.hpp  Material.hpp  MultiThread.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp  global.hpp
a7/outputs/: 256_16.ppm  256_64.ppm  768_256_cuda.ppm  768_64.ppm  784_1024_cuda.ppm
a8/: CMakeLists.txt
a8/CGL/src/: quaternion.h
a8/src/: CMakeLists.txt  main.cpp  mass.h  rope.cpp
